# backtesting

./: .gitignore  Readme.md  docker-compose.yml
backend/: .env.example  Dockerfile  Readme.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b6a30711efd_added_inital_amount_backtest_table.py  5126a49438f0_added_final_amount_backtest_table.py  91cff9bd60c0_updated_backtest_table.py  b6f1857fc136_updated_backtest_response_table.py  df2aaa7ec8f3_added_inital_amount_backtest_table.py  e3129b95f72c_create_users_table.py
backend/app/: database.py  main.py
backend/app/core/: config.py  security.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  backtest_model.py  user.py
backend/app/routes/: router.py
backend/app/routes/v1/: auth.py  backtest.py
backend/app/schemas/: auth.py  backtest.py  user.py
backend/app/services/: auth.py  backtest.py
backend/app/strategies/: dynamic_strategy.py
frontend/: .env.example  Dockerfile  Readme.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/backtest/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/auth/: protected-route.tsx
frontend/components/backtest/: backtest-form.tsx  equity-chart.tsx  summary-card.tsx  trade-history-table.tsx
frontend/components/ui/: input-field.tsx  select-field.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts  posthog.ts
frontend/types/: index.ts
