[tool.poetry]
name = "todo-list-with-fastapi-with-auth2-0"
version = "1.1.0"
description = ""
authors = ["jaspal <jaspalbhagal3@gmail.com>"]
packages = [{include = "app"}]
# optional
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic-settings = ">=2.10.1,<3.0.0"
pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
asyncpg = ">=0.30.0,<0.31.0"
bcrypt = "==4.0.1"
backtrader = ">=1.9.78.123,<2.0.0.0"
yfinance = ">=0.2.65,<0.3.0"
pandas = ">=2.3.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
